@@ -1,7 +1,7 @@
 #
 # Greylisting config file with a lot of options explained
 #
-# $Id: greylist2.conf,v 1.1 2006/08/20 04:49:49 manu Exp $
+# $Id: greylist2.conf,v 1.2 2009/04/04 03:09:43 manu Exp $
 #
 
 # Uncomment this to enable debug output.
@@ -14,6 +14,8 @@
 # peer entries to enable greylist sync among the MXs.
 #peer 192.0.2.17
 #peer 192.0.2.18
+#peer 192.0.2.22 timeout 7
+#peer 192.0.2.38 timeout 5m
 
 
 # You may wish to use a specific local address or port for
